# K-K

./: .gitignore  CLAUDE.md  README.md
proyectos/activos/agente-financiero-ptres/: .dockerignore  .env.example  AVISO_ALERTAS_SUMMARY_2026-07-09.md  AVISO_AUTENTICACION_JWT.md  AVISO_CAMBIO_ESTRUCTURA.md  AVISO_PL_REAL_2026-06-28.md  Caddyfile  DESPLIEGUE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
proyectos/activos/agente-financiero-ptres/archivados/: AVISO_CAMBIO_ESTRUCTURA.md
proyectos/activos/agente-financiero-ptres/core/: ESPECIFICACION.md  api.py  audit_log.py  auth.py  db.py  drive_client.py  lock.py  pipeline_spec.py  registry.py  uploads.py
proyectos/activos/agente-financiero-ptres/frontend/: index.html  package-lock.json  package.json  vite.config.js
proyectos/activos/agente-financiero-ptres/frontend-prototipo/: AgentePrototipo.jsx
proyectos/activos/agente-financiero-ptres/frontend/src/: App.jsx  api.js  index.css  uploadSpec.js
proyectos/activos/agente-financiero-ptres/pipelines/pl/: ESPECIFICACION.md  calculate.py  extract.py  interpret.py  referencia.py  spec.py  write.py
proyectos/activos/agente-financiero-ptres/pipelines/summary/: ESPECIFICACION.md  calculate.py  concentrado.py  extract.py  extract_fuentes.py  historial.py  interpret.py  spec.py  (+3 more)
proyectos/activos/agente-financiero-ptres/scripts/: crear_usuario.py
proyectos/activos/agente-financiero-ptres/tests/: conftest.py  test_api.py  test_audit_log.py  test_auth.py  test_crear_usuario_script.py  test_db.py  test_drive_client.py  test_lock.py  test_registry.py
(+67 files in other folders)
