[project]
name = "agente-financiero-ptres"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "openpyxl>=3.1",
    "anthropic>=0.40",
    "google-api-python-client>=2.150",
    "google-auth>=2.35",
    "pydantic>=2.9",
    "pyjwt>=2.9",
    "bcrypt>=4.2",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "pipelines"]
